<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Variables" Id="{4e0ea985-29d8-4132-9223-f15e8fa1fe3d}">
    <Declaration><![CDATA[VAR_GLOBAL

{attribute 'pytmc' := 'pv: RIX:FEE:VAC:OVRDON;
    field: ZNAM Override OFF;
     field: ONAM Override ON;
      io: io;
'}
xSystemOverrideMode1 : BOOL; (* Global system override for the prototype section*)

{attribute 'pytmc' := 'pv: RIX:HUT:VAC:OVRDON;
    field: ZNAM Override OFF;
     field: ONAM Override ON;
      io: io;
'}
xSystemOverrideMode2 : BOOL; (* Global system override for the prototype section*)

//Example implementation of the FFO
{attribute 'pytmc' := '
    pv: PLC:KFE:RIX:VAC:K2:FFO:01
'}
{attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO (EL2202)]^Channel 1^Output'}
g_FastFaultOutput1  :   FB_HardwareFFOutput:= (i_sNetID:='172.21.42.126.1.1');

{attribute 'pytmc' := '
    pv: PLC:KFE:RIX:VAC:ARB:01
'}
fbArbiter1 : FB_Arbiter(1);
{attribute 'pytmc' := '
    pv: PLC:KFE:RIX:VAC:ARB:02
'}
fbArbiter2 : FB_Arbiter(2);


fbLogHandler : FB_loghandler;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>